--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -104,10 +104,18 @@ en:
       notifications: "Notifications"
     profile:
       personal_info: "Personal Information"
+      personal_info_desc: "Update your account settings and preferences."
       preferences: "Preferences"
       save_changes: "Save Changes"
+      theme_color: "Theme Color"
+      theme_desc: "Customize the accent color of your platform."
+      language: "Language"
+      select_language: "Select a language"
+      timezone: "Timezone"
+      select_timezone: "Select a timezone"
     billing:
       billing_info: "Billing Information"
+      billing_info_desc: "Manage your billing information and tax data."
       managed_by_laniakea: "Managed by Laniakea"
       tax_id: "Tax ID / SSN / EIN"
       company_name: "Company Name"
@@ -115,6 +123,21 @@ en:
       city: "City"
       zip_code: "Zip Code"
       country: "Country"
+      payment_method: "Payment Method"
+      payment_secure: "All transactions are secure and encrypted."
+      name_on_card: "Name on Card"
+      card_number: "Card Number"
+      card_hint: "Enter your 16-digit number."
+      month: "Month"
+      year: "Year"
+      billing_address: "Billing Address"
+      billing_address_desc: "The billing address associated with your payment method."
+      same_as_shipping: "Same as shipping address"
+      comments: "Comments"
+      comments_placeholder: "Add any additional comments"
+      submit: "Submit"
+      cancel: "Cancel"
+      secure_encryption: "Protected with 256-bit SSL encryption"
     security:
       account_protected: "Account Protected"
   mailer:
