--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -75,10 +75,18 @@ es:
       notifications: "Notificaciones"
     profile:
       personal_info: "Información Personal"
+      personal_info_desc: "Actualiza la configuración de tu cuenta y preferencias."
       preferences: "Preferencias"
       save_changes: "Guardar Cambios"
+      theme_color: "Color del tema"
+      theme_desc: "Personaliza el color de acento de tu plataforma."
+      language: "Idioma"
+      select_language: "Selecciona un idioma"
+      timezone: "Zona Horaria"
+      select_timezone: "Selecciona una zona horaria"
     billing:
       billing_info: "Información de Facturación"
+      billing_info_desc: "Gestiona tu información de facturación y datos fiscales."
       managed_by_laniakea: "Gestionado por Laniakea"
       tax_id: "ID Fiscal / RUT / RFC"
       company_name: "Nombre de la Empresa"
@@ -86,6 +94,21 @@ es:
       city: "Ciudad"
       zip_code: "Código Postal"
       country: "País"
+      payment_method: "Método de Pago"
+      payment_secure: "Todas las transacciones son seguras y encriptadas."
+      name_on_card: "Nombre en la Tarjeta"
+      card_number: "Número de Tarjeta"
+      card_hint: "Ingresa tu número de 16 dígitos."
+      month: "Mes"
+      year: "Año"
+      billing_address: "Dirección de Facturación"
+      billing_address_desc: "La dirección asociada con tu método de pago."
+      same_as_shipping: "Igual que la dirección de envío"
+      comments: "Comentarios"
+      comments_placeholder: "Añade comentarios adicionales"
+      submit: "Guardar"
+      cancel: "Cancelar"
+      secure_encryption: "Protegido con encriptación SSL de 256 bits"
     security:
       account_protected: "Cuenta Protegida"
   mailer:
