--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -6,45 +6,45 @@ es:
     title: "Laniakea | Orquestador de Anuncios"
     description: "La plataforma de orquestación de anuncios impulsada por IA"
   login:
-    title: "Ingresar a tu cuenta"
-    subtitle: "Accede a tu panel de orquestación publicitaria."
-    email_label: "Email"
+    title: "Inicia sesión en tu cuenta"
+    subtitle: "Accede a tu panel de orquestación de anuncios."
+    email_label: "Correo electrónico"
     email_placeholder: "nombre@ejemplo.com"
     password_label: "Contraseña"
     password_placeholder: "••••••••"
     forgot_password: "¿Olvidaste tu contraseña?"
-    submit_button: "Entrar a Laniakea"
+    submit_button: "Entrar en Laniakea"
     submitting: "Conectando..."
-    or_continue_with: "O accede con"
+    or_continue_with: "O continuar con"
     google_login: "Google"
     new_here: "¿Nuevo en la red?"
     create_account: "Crea tu cuenta aquí"
-    sidebar_title: "Cúmulo Laniakea"
-    sidebar_desc: "Nuestra IA orquestando redes de anuncios como si fueran galaxias perfectamente alineadas."
-    success_message: "¡Bienvenido al cúmulo Laniakea!"
+    sidebar_title: "Supercúmulo Laniakea"
+    sidebar_desc: "Nuestra IA orquestando redes de anuncios como galaxias perfectamente alineadas."
+    success_message: "¡Bienvenido al supercúmulo Laniakea!"
   signup:
-    title: "Crear tu cuenta"
-    subtitle: "Forma parte de la red publicitaria más inteligente."
+    title: "Crea tu cuenta"
+    subtitle: "Forma parte de la red de anuncios más inteligente."
     name_label: "Nombre completo"
     name_placeholder: "Juan Pérez"
-    email_label: "Email"
+    email_label: "Correo electrónico"
     email_placeholder: "nombre@ejemplo.com"
     password_label: "Contraseña"
     password_placeholder: "••••••••"
     confirm_password_label: "Confirmar Contraseña"
-    submit_button: "Registrarme en Laniakea"
+    submit_button: "Registrarse en Laniakea"
     submitting: "Creando cuenta..."
     or_continue_with: "O conéctate con"
     google_signup: "Google"
-    already_have_account: "¿Ya tienes cuenta?"
-    login_here: "Inicia sesión"
-    sidebar_title: "Únete al Cúmulo"
-    sidebar_desc: "Comienza a orquestar tus campañas publicitarias con el poder del supercúmulo de Laniakea."
+    already_have_account: "¿Ya tienes una cuenta?"
+    login_here: "Inicia sesión aquí"
+    sidebar_title: "Únete al Supercúmulo"
+    sidebar_desc: "Comienza a orquestar tus campañas de anuncios con el poder del supercúmulo Laniakea."
   sidebar:
-    dashboard: "Dashboard"
+    dashboard: "Tablero"
     campaigns: "Campañas"
-    analytics: "Analíticas"
-    creatives: "Creativos"
+    analytics: "Analítica"
+    creatives: "Creatividades"
     clients: "Clientes"
     documents: "Documentos"
     settings: "Configuración"
@@ -52,9 +52,29 @@ es:
     logout: "Cerrar Sesión"
     main_menu: "Menú Principal"
     support: "Soporte"
+    operation: "Operación"
+    sales: "Ventas"
+    attendance: "Asistencia"
+    dispatches: "Despachos"
+    payments: "Pagos"
+    inventory: "Inventario"
+    stock: "Stock"
+    warehouses: "Bodegas"
+    transfers: "Traslados"
+    purchases: "Compras"
+    suppliers: "Proveedores"
+    catalog: "Catálogo"
+    products: "Productos"
+    categories: "Categorías"
+    administration: "Administración"
+    registers: "Registros"
+    properties: "Propiedades"
+    roles: "Roles y Permisos"
+    company: "Empresa"
   common:
     back_to_login: "Volver al inicio de sesión"
-    back_to_dashboard: "Volver al Dashboard"
+    back_to_dashboard: "Volver al Tablero"
+    none: "Ninguno"
   password:
     forgot_title: "¿Olvidaste tu contraseña?"
     forgot_subtitle: "No te preocupes, te enviaremos instrucciones para recuperarla."
@@ -67,7 +87,7 @@ es:
     update_password: "Actualizar contraseña"
   settings:
     title: "Configuración"
-    subtitle: "Gestiona tu cuenta, preferencias y facturación."
+    subtitle: "Administra tu cuenta, preferencias y facturación."
     menu:
       profile: "Perfil"
       billing: "Facturación"
@@ -75,10 +95,10 @@ es:
       notifications: "Notificaciones"
     profile:
       personal_info: "Información Personal"
-      personal_info_desc: "Actualiza la configuración de tu cuenta y preferencias."
+      personal_info_desc: "Actualiza la configuración y preferencias de tu cuenta."
       preferences: "Preferencias"
       save_changes: "Guardar Cambios"
-      theme_color: "Color del tema"
+      theme_color: "Color del Tema"
       theme_desc: "Personaliza el color de acento de tu plataforma."
       language: "Idioma"
       select_language: "Selecciona un idioma"
@@ -86,31 +106,99 @@ es:
       select_timezone: "Selecciona una zona horaria"
     billing:
       billing_info: "Información de Facturación"
-      billing_info_desc: "Gestiona tu información de facturación y datos fiscales."
+      billing_info_desc: "Administra tu información de facturación y datos fiscales."
       managed_by_laniakea: "Gestionado por Laniakea"
-      tax_id: "ID Fiscal / RUT / RFC"
+      tax_id: "NIT / RUT / ID Fiscal"
       company_name: "Nombre de la Empresa"
       address: "Dirección"
       city: "Ciudad"
       zip_code: "Código Postal"
       country: "País"
       payment_method: "Método de Pago"
-      payment_secure: "Todas las transacciones son seguras y encriptadas."
-      name_on_card: "Nombre en la Tarjeta"
-      card_number: "Número de Tarjeta"
-      card_hint: "Ingresa tu número de 16 dígitos."
+      payment_secure: "Todas las transacciones son seguras y están encriptadas."
+      name_on_card: "Nombre en la tarjeta"
+      card_number: "Número de tarjeta"
+      card_hint: "Ingresa los 16 dígitos."
       month: "Mes"
       year: "Año"
       billing_address: "Dirección de Facturación"
-      billing_address_desc: "La dirección asociada con tu método de pago."
+      billing_address_desc: "La dirección de facturación asociada a tu método de pago."
       same_as_shipping: "Igual que la dirección de envío"
       comments: "Comentarios"
-      comments_placeholder: "Añade comentarios adicionales"
-      submit: "Guardar"
+      comments_placeholder: "Añade cualquier comentario adicional"
+      submit: "Enviar"
       cancel: "Cancelar"
       secure_encryption: "Protegido con encriptación SSL de 256 bits"
     security:
       account_protected: "Cuenta Protegida"
+  superadmin:
+    sidebar:
+      global_management: "Gestión Global"
+      accounts: "Cuentas"
+      plans: "Planes"
+      system: "Sistema"
+      settings: "Configuración"
+      panel_desc: "Panel Superadmin"
+    dashboard:
+      title: "Panel Superadmin"
+      subtitle: "Gestión global de la plataforma Laniakea."
+      total_accounts: "Total Cuentas"
+      active_accounts: "Cuentas Activas"
+      trial_accounts: "En Periodo de Prueba"
+      registered_accounts: "Cuentas Registradas"
+      table:
+        name: "Nombre"
+        plan: "Plan"
+        status: "Estado"
+        owner: "Propietario"
+        created: "Creada"
+        loading: "Cargando cuentas..."
+        no_accounts: "No hay cuentas registradas aún."
+        actions: "Acciones"
+    actions:
+      edit: "Editar"
+      save: "Guardar"
+      cancel: "Cancelar"
+      delete: "Eliminar"
+      new: "Nuevo"
+      activate: "Activar"
+      deactivate: "Desactivar"
+      search: "Buscar"
+    form:
+      name: "Nombre"
+      status: "Estado"
+      plan: "Plan"
+      active: "Activo"
+      trialing: "Prueba"
+      past_due: "Vencido"
+      canceled: "Cancelado"
+      suspended: "Suspendido"
+      set_active: "Activar Cuenta"
+      no_plan: "Sin Plan"
+    plans:
+      title: "Gestión de Planes"
+      subtitle: "Administra los planes de suscripción y precios."
+      new: "Nuevo Plan"
+      table:
+        name: "Nombre"
+        price: "Precio"
+        interval: "Intervalo"
+        status: "Estado"
+        actions: "Acciones"
+      form:
+        name: "Nombre del plan"
+        price: "Precio (Centavos)"
+        currency: "Moneda"
+        interval: "Intervalo"
+        month: "Mensual"
+        year: "Anual"
+        active: "Activo"
+        stripe_id: "Stripe Price ID"
+        max_users: "Límite Usuarios"
+        max_social_profiles: "Límite Perfiles"
+        features: "Características"
+      modals:
+        mode_indicator: "Modo Superadmin"
   mailer:
     layout:
       title: "Laniakea"
