--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,32 +1,3 @@
-# Files in the config/locales directory are used for internationalization and
-# are automatically loaded by Rails. If you want to use locales other than
-# English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more about the API, please read the Rails Internationalization guide
-# at https://guides.rubyonrails.org/i18n.html.
-#
-# Be aware that YAML interprets the following case-insensitive strings as
-# booleans: `true`, `false`, `on`, `off`, `yes`, `no`. Therefore, these strings
-# must be quoted to be interpreted as strings. For example:
-#
-#     en:
-#       "yes": yup
-#       enabled: "ON"
-
 en:
   hello: "Hello world"
   errors:
@@ -81,9 +52,29 @@ en:
     logout: "Logout"
     main_menu: "Main Menu"
     support: "Support"
+    operation: "Operation"
+    sales: "Sales"
+    attendance: "Attendance"
+    dispatches: "Dispatches"
+    payments: "Payments"
+    inventory: "Inventory"
+    stock: "Stock"
+    warehouses: "Warehouses"
+    transfers: "Transfers"
+    purchases: "Purchases"
+    suppliers: "Suppliers"
+    catalog: "Catalog"
+    products: "Products"
+    categories: "Categories"
+    administration: "Administration"
+    registers: "Registers"
+    properties: "Properties"
+    roles: "Roles & Permissions"
+    company: "Company"
   common:
     back_to_login: "Back to login"
     back_to_dashboard: "Back to Dashboard"
+    none: "None"
   password:
     forgot_title: "Forgot your password?"
     forgot_subtitle: "Don't worry, we'll send you instructions to recover it."
@@ -140,6 +131,74 @@ en:
       secure_encryption: "Protected with 256-bit SSL encryption"
     security:
       account_protected: "Account Protected"
+  superadmin:
+    sidebar:
+      global_management: "Global Management"
+      accounts: "Accounts"
+      plans: "Plans"
+      system: "System"
+      settings: "Settings"
+      panel_desc: "Superadmin Panel"
+    dashboard:
+      title: "Superadmin Panel"
+      subtitle: "Global management of the Laniakea platform."
+      total_accounts: "Total Accounts"
+      active_accounts: "Active Accounts"
+      trial_accounts: "In Trial Period"
+      registered_accounts: "Registered Accounts"
+      table:
+        name: "Name"
+        plan: "Plan"
+        status: "Status"
+        owner: "Owner"
+        created: "Created"
+        loading: "Loading accounts..."
+        no_accounts: "No accounts registered yet."
+        actions: "Actions"
+    actions:
+      edit: "Edit"
+      save: "Save"
+      cancel: "Cancel"
+      delete: "Delete"
+      new: "New"
+      activate: "Activate"
+      deactivate: "Deactivate"
+      search: "Search"
+    form:
+      name: "Name"
+      status: "Status"
+      plan: "Plan"
+      active: "Active"
+      trialing: "Trialing"
+      past_due: "Past Due"
+      canceled: "Canceled"
+      suspended: "Suspended"
+      set_active: "Set Active"
+      no_plan: "No Plan"
+    plans:
+      title: "Plans Management"
+      subtitle: "Manage subscription plans and prices."
+      new: "New Plan"
+      table:
+        name: "Name"
+        price: "Price"
+        interval: "Interval"
+        status: "Status"
+        actions: "Actions"
+      form:
+        name: "Plan Name"
+        price: "Price (Cents)"
+        currency: "Currency"
+        interval: "Interval"
+        month: "Monthly"
+        year: "Yearly"
+        active: "Active"
+        stripe_id: "Stripe Price ID"
+        max_users: "Max Users"
+        max_social_profiles: "Max Profiles"
+        features: "Features"
+      modals:
+        mode_indicator: "Superadmin Mode"
   mailer:
     layout:
       title: "Laniakea"
