--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -161,6 +161,7 @@ en:
       cancel: "Cancel"
       delete: "Delete"
       new: "New"
+      add: "Add"
       activate: "Activate"
       deactivate: "Deactivate"
       search: "Search"
